--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,9 +1,8 @@
-formatter.name: nyan.cat
-extensions:
-    - PhpSpec\NyanFormattersExtension\Extension
-    - PhpSpec\Extension\CodeCoverageExtension
-code_coverage:
-    format:
-        - html
-    output:
-        html: coverage
+#extensions:
+#    - PhpSpec\NyanFormattersExtension\Extension
+#    - PhpSpec\Extension\CodeCoverageExtension
+#code_coverage:
+#    format:
+#        - html
+#    output:
+#        html: coverage
